affichage en fonction du bouton layout

--- a/Instagrid v2/InstaGrid/InstaGrid/Storyboards/Base.lproj/Main.storyboard
+++ b/Instagrid v2/InstaGrid/InstaGrid/Storyboards/Base.lproj/Main.storyboard
@@ -52,7 +52,7 @@
                                         <rect key="frame" x="10" y="155" width="135" height="135"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="135" id="1Mf-7y-8X4"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="135" id="1Mf-7y-8X4"/>
                                             <constraint firstAttribute="height" constant="135" id="sVw-FW-N89"/>
                                         </constraints>
                                         <state key="normal" title="Button"/>
@@ -63,7 +63,7 @@
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="135" id="SFC-PY-0tO"/>
-                                            <constraint firstAttribute="width" constant="135" id="c9f-Qb-w7Z"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="135" id="c9f-Qb-w7Z"/>
                                         </constraints>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="Plus"/>
@@ -71,16 +71,19 @@
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBlueColor"/>
                                 <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="KzJ-Ai-fZt" secondAttribute="trailing" constant="10" id="0hO-5L-7HZ"/>
                                     <constraint firstItem="pTc-ds-Rss" firstAttribute="top" secondItem="Rlx-Jm-QDX" secondAttribute="bottom" constant="10" id="GJ5-PJ-m60"/>
                                     <constraint firstItem="Rlx-Jm-QDX" firstAttribute="leading" secondItem="AOc-y7-o3h" secondAttribute="leading" constant="10" id="L2Y-qF-Sx3"/>
                                     <constraint firstAttribute="height" constant="300" id="Np5-iW-Hrf"/>
                                     <constraint firstItem="XNM-Tk-GMH" firstAttribute="leading" secondItem="Rlx-Jm-QDX" secondAttribute="trailing" constant="10" id="SGk-9n-1AQ"/>
+                                    <constraint firstAttribute="bottom" secondItem="KzJ-Ai-fZt" secondAttribute="bottom" constant="10" id="Sve-wm-p33"/>
                                     <constraint firstItem="KzJ-Ai-fZt" firstAttribute="top" secondItem="XNM-Tk-GMH" secondAttribute="bottom" constant="10" id="cXv-OC-6zV"/>
                                     <constraint firstAttribute="width" constant="300" id="iUN-2h-q9V"/>
                                     <constraint firstItem="Rlx-Jm-QDX" firstAttribute="top" secondItem="AOc-y7-o3h" secondAttribute="top" constant="10" id="lRr-qw-twY"/>
                                     <constraint firstItem="pTc-ds-Rss" firstAttribute="leading" secondItem="AOc-y7-o3h" secondAttribute="leading" constant="10" id="mGW-Ci-doJ"/>
                                     <constraint firstAttribute="trailing" secondItem="XNM-Tk-GMH" secondAttribute="trailing" constant="10" id="n5Q-Wu-uhN"/>
                                     <constraint firstItem="KzJ-Ai-fZt" firstAttribute="leading" secondItem="pTc-ds-Rss" secondAttribute="trailing" constant="10" id="oIz-Bz-o9H"/>
+                                    <constraint firstAttribute="bottom" secondItem="pTc-ds-Rss" secondAttribute="bottom" constant="10" id="orO-2G-uVf"/>
                                     <constraint firstItem="XNM-Tk-GMH" firstAttribute="top" secondItem="AOc-y7-o3h" secondAttribute="top" constant="10" id="rV0-lo-L03"/>
                                 </constraints>
                             </view>
@@ -180,15 +183,19 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="gridView" destination="AOc-y7-o3h" id="pvX-z7-gxZ"/>
+                        <outlet property="gridView" destination="AOc-y7-o3h" id="m60-ZT-y2N"/>
                         <outlet property="layout1Button" destination="H0d-Qg-J7y" id="Cl8-F5-kaL"/>
                         <outlet property="layout2Button" destination="Yib-zh-a7C" id="S2q-qH-4ce"/>
                         <outlet property="layout3Button" destination="X7i-JK-ukE" id="dqc-My-7PS"/>
                         <outlet property="leadDownSquare" destination="pTc-ds-Rss" id="8FA-bY-zrm"/>
+                        <outlet property="leadDownWidthConstraint" destination="1Mf-7y-8X4" id="Jzj-qa-X7B"/>
                         <outlet property="leadUpSquare" destination="Rlx-Jm-QDX" id="YZ5-cQ-iCY"/>
                         <outlet property="leadUpWidhtConstraint" destination="Wln-2u-iV1" id="j6Q-rq-7ah"/>
                         <outlet property="trailDownSquare" destination="KzJ-Ai-fZt" id="XPl-Yh-Uee"/>
+                        <outlet property="trailDownTrailConstraint" destination="0hO-5L-7HZ" id="I3R-ei-qW5"/>
+                        <outlet property="trailDownWidthConstraint" destination="c9f-Qb-w7Z" id="lq9-a3-bPv"/>
                         <outlet property="trailUpSquare" destination="XNM-Tk-GMH" id="irm-6r-DSe"/>
+                        <outlet property="trailUpTrailConstraint" destination="n5Q-Wu-uhN" id="XR9-dm-Zzw"/>
                         <outlet property="trailUpWidthConstraint" destination="0Wt-UC-PyW" id="Xyk-0r-kYt"/>
                     </connections>
                 </viewController>
