--- a/Instagrid v2/InstaGrid/InstaGrid/Storyboards/Base.lproj/Main.storyboard
+++ b/Instagrid v2/InstaGrid/InstaGrid/Storyboards/Base.lproj/Main.storyboard
@@ -125,26 +125,26 @@
                                 </subviews>
                                 <variation key="heightClass=compact-widthClass=regular" axis="vertical"/>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="bhS-pV-via">
-                                <rect key="frame" x="112.33333333333333" y="197.66666666666666" width="168.66666666666669" height="57"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="bhS-pV-via" userLabel="swipe Stack View">
+                                <rect key="frame" x="116.33333333333333" y="197.66666666666666" width="160.33333333333337" height="57"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Arrow Left" translatesAutoresizingMaskIntoConstraints="NO" id="1ks-We-Uyw">
-                                        <rect key="frame" x="74.333333333333329" y="0.0" width="20" height="20"/>
+                                        <rect key="frame" x="70.333333333333329" y="0.0" width="20" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="20" id="B6d-9R-rMt"/>
                                             <constraint firstAttribute="height" constant="20" id="CMf-Xp-oPp"/>
                                         </constraints>
                                         <variation key="heightClass=regular-widthClass=compact" image="Arrow Up"/>
                                     </imageView>
-                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Switch up to share" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JJh-gQ-qNQ">
-                                        <rect key="frame" x="0.0" y="28" width="168.66666666666666" height="29"/>
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe up to share" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JJh-gQ-qNQ">
+                                        <rect key="frame" x="0.0" y="28" width="160.33333333333334" height="29"/>
                                         <fontDescription key="fontDescription" name="Delm-Medium" family="Delm" pointSize="26"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                         <variation key="heightClass=regular-widthClass=compact" hidden="NO"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Switch left to share" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t8y-rA-hiT">
-                                        <rect key="frame" x="-5.6666666666666572" y="57" width="179.66666666666666" height="0.0"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe left to share" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t8y-rA-hiT">
+                                        <rect key="frame" x="-5.3333333333333286" y="57" width="171" height="0.0"/>
                                         <fontDescription key="fontDescription" name="Delm-Medium" family="Delm" pointSize="26"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -182,6 +182,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="SwipeStack" destination="bhS-pV-via" id="fjg-b0-feH"/>
                         <outlet property="gridView" destination="AOc-y7-o3h" id="m60-ZT-y2N"/>
                         <outlet property="layout1Button" destination="H0d-Qg-J7y" id="Cl8-F5-kaL"/>
                         <outlet property="layout2Button" destination="Yib-zh-a7C" id="S2q-qH-4ce"/>
